1998-09-02  Martin Baulig  <martin@home-of-linux.org>

	* gnomesupport.awk (canonicalize_file_name, realpath): Emit
	declarations if required.

	* canonicalize.c (canonicalize_file_name, realpath): New file.
	Imported from GLibC 2.0.7.

	* libc-symbols.h: New file. Imported from GLibC 2.0.7.

1998-08-24  Martin Baulig  <martin@home-of-linux.org>

	* gnomesupport.awk: Emit declarations for `setreuid', `setregid'
	and `getpagesize' if required (GCC_NEED_DECLARATIONS).

1998-08-18  Martin Baulig  <martin@home-of-linux.org>

	* Makefile.am: Added explicit dependency `error.c: gnomesupport.h'.

	* gnomesupport-fake.h: Include `sys/types.h' to get `size_t' under
	FreeBSD.

	* gnomesupport-fake.h: Include `gnomesupport.h' only if we really
	`NEED_GNOMESUPPORT_H'.

1998-08-16  Martin Baulig  <martin@home-of-linux.org>

	* Makefile.am (EXTRA_DIST): Added all source and header files that
	are in CVS to make sure everything is included in the distribution
	no matter which files are used on the build system.

1998-08-15  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (libgnomesupport_la_SOURCES): List `gnomesupport.h'
	here in the hope that it'll ensure that it is built.

1998-08-05  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (noinst_HEADERS): Add `gnomesupport-fake.h'.

1998-08-02  Raja R Harinath  <harinath@cs.umn.edu>

	* error.c (program_name): Clean up #ifdef logic some more.
	(HAVE_STRERROR_R): Step on implementation namespace only if _LIBC.

1998-07-30  Martin Baulig  <martin@home-of-linux.org>

	* error.c: Making weak alias `__error' and `__error_at_line'
	only if `_LIBC' is defined and not if we only
	HAVE_PROGRAM_INVOCATION_NAME.

	* gnomesupport-fake.h: Include gnome-argp.h to get
	`program_invocation_name'.

1998-07-29  Raja R Harinath  <harinath@cs.umn.edu>

	* gnomesupport-fake.h: New file.  Fake in HAVE_* for functions
	that are provided by `gnomesupport' rather than `libc'.
	* error.c: Include gnomesupport-fake.h.