@@ -1,3 +1,11 @@
+1998-09-02  Raja R Harinath  <harinath@cs.umn.edu>
+
+	* canonicalize.c (realpath): Remove `weak_alias'.
+	(canonicalize_file_name): Comment out.
+
+	* gnomesupport.awk: Remove `canonicalize_file_name', and correct
+	the comment for `realpath'.
+
 1998-09-02  Martin Baulig  <martin@home-of-linux.org>
 
 	* gnomesupport.awk (canonicalize_file_name, realpath): Emit
